# extensaoIII

./: .env.example  .gitignore  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  main.py  pyproject.toml  setup.py
backend/app/: database.py  essential_imports.py
backend/app/models/: QuestionModel.py  chat_model.py  chatquestion_model.py  image_model.py  prompt_model.py  question_model.py  student_model.py  subject_model.py  topic_model.py
backend/app/repositories/: QuestionRepository.py  chat_repository.py  chatquestion_repository.py  image_repository.py  prompt_repository.py  question_repository.py  student_repository.py  subject_repository.py  topic_repository.py
backend/app/routes/: student_routes.py
backend/app/routes_back/: chatDB_routes.py  chatmessageDB_routes.py  essayDB_routes.py  habilcompDB_routes.py  interactionDB_routes.py  llm_routes.py  questionDB_routes.py  themeDB_routes.py  userDB_routes.py
backend/app/routes_front/: chat_routes.py  essay_routes.py  question_routes.py  theme_routes.py  user_routes.py
backend/app/schemas/: alternativa.py  chat.py  chatmessage.py  chatquestion.py  essay.py  image.py  interaction.py  login.py  prompt.py  question.py  student.py  subject.py  theme.py  topic.py  user.py
backend/app/services/: chat_service.py  chatquestion_service.py  image_service.py  llm_service.py  prompt_service.py  question_service.py  student_service.py  subject_service.py  topic_service.py
backend/testes/: setup.py  teste.py
backend/testes/backups/: llm_service.py
(+102 files in other folders)
